git commit --amend
вставила функции approve и  donateInUSDT в компоненты кнопок Approve и Confirm, + disable кнопки Donate если isRegistered == false

--- a/src/components/sharedComponents/DonateButton/DonateModal/DonateModal.module.scss
+++ b/src/components/sharedComponents/DonateButton/DonateModal/DonateModal.module.scss
@@ -145,3 +145,15 @@
   color: #CB00DD;
   margin: 0 auto;
 }
+
+.payInput {
+  width: 70px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  padding: 5px 0;
+  text-align: center;
+
+  &:focus {
+    outline: 1px solid #777;
+  }
+}
