main page fixes

--- a/src/components/pages/MainPage/ExpertList/ExpertListItem/ExpertListItem.module.scss
+++ b/src/components/pages/MainPage/ExpertList/ExpertListItem/ExpertListItem.module.scss
@@ -34,6 +34,12 @@
 
 .cellDonations {
   width: 25%;
+
+}
+
+.cellDonationsSum {
+  min-width: 50px;
+  display: inline-block;
 }
 
 .cellDonationsPlus {
