--- a/src/components/pages/ExpertProfile/ExpertProfile.module.scss
+++ b/src/components/pages/ExpertProfile/ExpertProfile.module.scss
@@ -4,7 +4,7 @@
   padding-top: 48px;
   display: flex;
   justify-content: space-between;
-  align-items: start;
+  align-items: flex-start;
 }
 
 .mainBlock {
