--- a/src/components/pages/MainPage/ExpertList/Clock/Clock.module.scss
+++ b/src/components/pages/MainPage/ExpertList/Clock/Clock.module.scss
@@ -2,7 +2,7 @@
 .expertsTime {
   width: 290px;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
 
 
